Preparation for JDK11 update, Updated following code to fix warning with respect to JDK11 - Replaced Class::newInstance occurrences (OFBIZ-10757)
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/ofbiz-plugins/trunk@1854684 13f79535-47bb-0310-9956-ffa450edef68